Add new names for css classes to better reflect their position

--- a/contact.html
+++ b/contact.html
@@ -57,23 +57,25 @@
       </div>
     </nav>
   </header>
- <section>
-    <div class="container div2">
-    <div class="container heading-background">
+ <section class="container">
+      <div class="row">
+      <div class="col-12  title-div">
+      <div class="container heading-background heading-padding heading-margin-top">
       <h1>Contact Us <i class="fas fa-envelope-open"></i></h1>
       <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
       the form below.</p>
       <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out, 
       you may have some ideas that you'd like us to work on for the next calculator.</p>
       <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and  
-      symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p><br>
+      symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p>
+      </div>
     </div>
     </div>
   </section>
    <section class="container">
 
       <div class="row">
-        <div class="col-12 div2">
+        <div class="col-12 title-div">
         <div class="container heading-background heading-padding heading-margin">
           <h2>Send us a message</h2>
           <p class="card-text">
@@ -85,7 +87,7 @@
       <form id="user_request" method="post">
       <div class="row">
         <!-- Email Form-->
-        <div class="col-12 div3">
+        <div class="col-12 content-div">
 <div class="form-group">
     <label for="intputName">Your name</label>
     <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
@@ -99,7 +101,7 @@
   </div>
   
   <div class="row">
-  <div class="col-12 div2 text-center">
+  <div class="col-12 title-div text-center">
   <button class="btn btn-success btn-lg btn--padding">Submit</button>
   </div>
   </div>
