--- a/game.html
+++ b/game.html
@@ -59,21 +59,23 @@
       </div>
     </nav>
   </header>
-<section>
-    <div class="container div2">
-    <div class="container heading-background">
+<section class="container">
+      <div class="row">
+      <div class="col-12  title-div">
+      <div class="container heading-background heading-padding heading-margin-top">
       <h1>Reaction Time Game <i class="fas fa-gamepad"></i></h1>
       <p class="head-text">If you're wanting to test your reaction time for the calculator, you can do so here by playing this game. Just try to hit the 
       brakes when the light turns red.</p>
       <p class="head-text">Because we're dealing with reaction times between the pedals in a car, this test done by hand and mouse or touch screen may not give an 
       accurate representation of reaction time. This game tests your reaction time as an estimate only.</p>
-      <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p><br>
+      <p class="head-text my-0">Reaction times will vary with age, tiredness, distractions, impairment with alcohol or drugs and many other reasons.</p>
+      </div>
     </div>
     </div>
   </section>
   <section class="container">
    <div class="row">
-        <div class="col-12 div2">
+        <div class="col-12 title-div">
         <div class="container heading-background heading-padding heading-margin">
           <h2>Test your reaction time!</h2>
           <p class="card-text">
@@ -85,10 +87,10 @@
   </section>
   <div class="container">
  <div class="row">
-        <div class="col-lg-4 div3">
+        <div class="col-lg-4 content-div">
         </div>
         <!-- Reaction Time Game Card-->
-        <div class="col-lg-4 div3">
+        <div class="col-lg-4 content-div">
           <div class="card shadow">
           <div class="container text-center">
             <span id="redLightStart" class="red_light_icon"><br><i class="fas fa-lightbulb fa-7x"></i></span>
@@ -115,7 +117,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 div3">
+        <div class="col-lg-4 content-div">
         
         </div>
       </div>
