--- a/test_yourself.html
+++ b/test_yourself.html
@@ -57,41 +57,48 @@
       </div>
     </nav>
   </header>
-  <section>
-      <div class="container div2">
-      <div class="container heading-background">
+  <section class="container">
+      <div class="row">
+      <div class="col-12  title-div">
+      <div class="container heading-background heading-padding heading-margin-top">
       <h1>Test Yourself <i class="fas fa-pencil-ruler"></i></h1>
       <p class="head-text">There are five maps to choose from in this test where you'll need to measure the intersection distance for a given
        scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button<a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using our 
-       <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> calculator</a> for best results.</p>
+       <a href="index.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
       <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
-      
       <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-sm-row background-ul">
-      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fas fa-desktop"></i> Desktop</button></a></li>
-      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
-      <li class="list-group-item background-ul"><a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank"><button class="btn btn-primary btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a><br></li>
+      <li class="list-group-item background-ul">
+      <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">
+      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fas fa-desktop"></i> Desktop</button></a></li>
+      <li class="list-group-item background-ul">
+      <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank">
+      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
+      <li class="list-group-item background-ul">
+      <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank">
+      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a><br></li>
       </ul>
+      </div>
       </div>
     </div>
   </section>
 <!-- Map One-->
   <section class="container">
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map one is located in Moscow, Russia at Tverskaya Zastava Square. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
+         Map one is located in Moscow, Russia at Tverskaya Zastava Square.
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-map-1">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body">
-            <h5 class="card-title">Question One</h5>
+            <h5 class="card-title">Question One <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
             <p>Determine the size of the intersection using the Google Map link provided and by using the following data, assess if a dilemma or option zone exists:</p>
             <p>An alert driver with a better than average reaction times approaches the intersection in dry conditions with good road to tire grip. The driver is cruising at 45 kmh<sup>-1</sup>. 
             The yellow phase is 4.2 s and interphase 2.2 s. The driver's vehicle is 5.2 m long.</p>
@@ -99,7 +106,7 @@
             </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-map-large-1">
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
@@ -113,25 +120,25 @@
     </div>
 <!-- Map Two-->
 <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
+         Map two is located in Sydney, Australia where the M7 is crossed by Sunnyholt Road. 
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-2">
-            <h5 class="card-title">Question Two</h5>
+            <h5 class="card-title">Question Two <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-map-large-2">
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
@@ -145,25 +152,25 @@
     </div>
 
      <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
+         Map three is located in Ashburn, Virginia in the USA where the Harry Byrd Highway is intersected by Lexington Drive. 
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-3">
-            <h5 class="card-title">Question Three</h5>
+            <h5 class="card-title">Question Three <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-map-large-3">
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
@@ -177,25 +184,25 @@
     </div>
 
 <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
+         Map four is located in Nürnberg, Germany at Sigmundstraße and Leyher Street. 
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-4">
-            <h5 class="card-title">Question Four</h5>
+            <h5 class="card-title">Question Four <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-map-large-4">
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
@@ -209,25 +216,25 @@
     </div>
 
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Open the map</h2>
         <p class="card-text">
-         Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way. <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a>
+         Map five is located in Dublin at Northside where Constitution Hill is intersected by Western Way. 
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow">
           <i class="fas fa-map-marker-alt fa-5x icon-center"></i>
           <div class="card-body" id="card-map-5">
-            <h5 class="card-title">Question Five</h5>
+            <h5 class="card-title">Question Five <a href="help.html" target="_blank"  class="info-icon"> <i class="fas fa-info-circle"></i></a></h5>
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-map-large-5">
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
