--- a/help.html
+++ b/help.html
@@ -53,9 +53,10 @@
       </div>
     </nav>
   </header>
-  <section>
-    <div class="container div2">
-    <div class="container heading-background">
+  <section class="container">
+      <div class="row">
+      <div class="col-12 title-div">
+      <div class="container heading-background heading-padding heading-margin-top">
       <h1>Help with understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
       <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
         firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
@@ -64,14 +65,15 @@
       <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
         calcuator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
         required and how the results can be evaluated.</p>
-      <p class="head-text my-0"></p><br>
+      <p class="head-text my-0"></p>
+      </div>
     </div>
     </div>
   </section>
   <!--First Set of Cards-->
   <section class="container">
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Velocity and signal phases</h2>
         <p class="card-text">
@@ -81,7 +83,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-velocity">
           <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Velocity Image">
           <div class="card-body">
@@ -89,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-velocity">
           <div class="card-body">
             <p>Velocity is a measure of the amount of distance an object travels over an amount of time in a relative direction.
@@ -102,7 +104,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-yellow">
           <img class="card-img-top img-fluid" src="assets/images/card-images/yellow.png" alt="Yellow Light Image">
           <div class="card-body">
@@ -110,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-yellow">
           <div class="card-body">
             <p>The yellow light phase (<sub>yp</sub>) is a predetermined length of time controlled at the intersection.</p>
@@ -122,7 +124,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-red">
           <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Red Light Image">
           <div class="card-body">
@@ -130,7 +132,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-red">
           <div class="card-body">
             <p>During the interphase all traffic signals at an intersection are red. This time is predetermined but usually is around 1 to 2 seconds.</p>
@@ -143,7 +145,7 @@
     </div>
     <!-- Second Set of Cards-->
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Reaction Time, Friction and Intersection Size</h2>
         <p class="card-text">
@@ -153,7 +155,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-reaction-time">
           <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Stopwatch Image">
           <div class="card-body">
@@ -161,13 +163,13 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-reaction-time">
           <div class="card-body">
             <p>Reaction time is a measure of how quickly a person reacts to a stimulus. In this case, how quickly a person reacts to seeing a yellow signal light.
               The unit is almost always seconds, and can commonly be less than 1 second. However, many variables come into play when assessing reaction times.</p>
             <p>There is no equation you can use to determine reaction time, other than trying it experimentally. We have designed a reaction time game that may
-              help determine your reaction time or that of other people. See the <a href="game.html" target="_blank">reaction time game</a>
+              help determine your reaction time or that of other people. See the <a href="game.html" class="underline" target="_blank">reaction time game</a>
               to run various estimates and averages for reaction times.</p>
               <p>In order to work out stopping distance, we need to take into account the distance travelled before any action has taken place. To do this we 
               calculate: \[dist_{reaction} = { velocity \cdot time_{reaction}}\]</p>
@@ -176,7 +178,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-friction">
           <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Friction Image">
           <div class="card-body">
@@ -184,14 +186,14 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-friction">
           <div class="card-body">
             <p>The coefficient of friction (μ) is a unitless number between 0 and 1. The lowest possible friction would be zero, however, this is not
               logical or plausible in a real world context as this would suggest a complete frictionless system. Conversely, the highest possible friction
               would be one. Again, this would not be plausible as movement would then become impossible. You can estimate μ by using real world data.
               Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For
-              more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" target="_blank">
+              more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" class="underline" target="_blank">
                 here</a>.
                 \[μ\]</p>
              </div>
@@ -199,7 +201,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-intersection">
           <img class="card-img-top img-fluid" src="assets/images/card-images/intersection.png" alt="Intersection Image">
           <div class="card-body">
@@ -207,7 +209,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-intersection">
           <div class="card-body">
             <p>There are a few methods to measuring intersection distances, the most precise method is being there. However, scaled maps on Google and Bing have
@@ -222,7 +224,7 @@
     </div>
     <!--Third Set of Cards-->
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Length of vehicle</h2>
         <p class="card-text">
@@ -232,7 +234,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-length">
           <img class="card-img-top img-fluid" src="assets/images/card-images/length.png" alt="Length Image">
           <div class="card-body">
@@ -240,7 +242,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-length">
           <div class="card-body">
             <p>The one thing that becomes extremely difficult to account for is the type of vehicle approaching the stop line. For the most part we've been
@@ -254,17 +256,17 @@
     </div>
     <!--Fourth Set of Cards-->
     <div class="row">
-      <div class="col-12 div2">
+      <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
         <h2>Putting it all together</h2>
         <p class="card-text">
-          When you have all your variables you can put them into our <a href="index.html" target="_blank"> calculator</a> or work it out yourself with this equation.
+          When you have all your variables you can put them into our <a href="index.html" class="underline" target="_blank"> calculator</a> or work it out yourself with this equation.
         </p>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 div3">
+      <div class="col-lg-4 content-div">
         <div class="card shadow" id="card-help-final">
           <img class="card-img-top img-fluid" src="assets/images/card-images/calculator.png" alt="Calculator Image">
           <div class="card-body">
@@ -272,7 +274,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8 div3">
+      <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-final">
           <div class="card-body">
             <p>The final equation requires all the inputs for each variable.
