Add styles to buttons for forms and help for increased visibility

--- a/help.html
+++ b/help.html
@@ -57,7 +57,7 @@
       <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin-top">
-      <h1>Help with understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
+      <h1>Understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
       <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
         firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
       <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
@@ -65,7 +65,6 @@
       <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
         calcuator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
         required and how the results can be evaluated.</p>
-      <p class="head-text my-0"></p>
       </div>
     </div>
     </div>
