--- a/test_yourself.html
+++ b/test_yourself.html
@@ -75,7 +75,7 @@
       <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
       <li class="list-group-item background-ul">
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank">
-      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a><br></li>
+      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a></li>
       </ul>
       </div>
       </div>
