--- a/index.html
+++ b/index.html
@@ -370,12 +370,12 @@
         <div class="container text-center title-div">
           <input 
           type="submit" 
-          class="btn btn-success btn-lg btn--padding" 
+          class="btn btn-success btn-green form--button btn-lg mr-3 btn--padding btn-rounded" 
           onclick="validateForm();convert();convertDistance();dilemmaZone()" 
           value="Calculate" />
           <input 
           type="reset" 
-          class="btn btn-primary btn-lg btn--padding" 
+          class="btn btn-primary btn-blue form--button btn-lg btn--padding btn-rounded" 
           id="formReset" 
           value="Reset" />
         </div>
