Add unicode icons to input buttons on calculator form for increased visibility

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
   
   <div class="row">
   <div class="col-12 title-div text-center">
-  <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding">Submit</button>
+  <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding"><i class="fas fa-paper-plane"></i> Submit</button>
   </div>
   </div>
         </div>
