--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
           type="submit" 
           class="btn btn-success btn-green form--button btn-lg mr-3 btn--padding btn-rounded" 
           onclick="validateForm();convert();convertDistance();dilemmaZone()" 
-          value="Calculate" />
+          value="&#128505; Calculate" />
           <input 
           type="reset" 
           class="btn btn-primary btn-blue form--button btn-lg btn--padding btn-rounded" 
           id="formReset" 
-          value="Reset" />
+          value="&#128473; Reset" />
         </div>
       </div>
     </form>
@@ -412,7 +412,7 @@
             <p>Zone : <br>
               <strong><span>A </span><span id="zone"></span></strong>
             </p>
-            <p>Velocity (m/s) : <br>
+            <p>Velocity (ms<sup>-1</sup>) : <br>
               <strong><span id="conversion"></span></strong>
             </p>
             <p>Intersection distance (m) : <br>
