--- a/test_yourself.html
+++ b/test_yourself.html
@@ -69,13 +69,13 @@
       <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-sm-row background-ul">
       <li class="list-group-item background-ul">
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DDesktop&hl=en" target="_blank">
-      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fas fa-desktop"></i> Desktop</button></a></li>
+      <button class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fas fa-desktop"></i> Desktop</button></a></li>
       <li class="list-group-item background-ul">
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DAndroid&hl=en" target="_blank">
-      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
+      <button class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-android"></i> Android</button></a></li>
       <li class="list-group-item background-ul">
       <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank">
-      <button class="btn btn-primary btn-blue btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a></li>
+      <button class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-apple"></i> Apple</button></a></li>
       </ul>
       </div>
       </div>
